--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </div>
     </section>
     <section id="controls">
-      <button @click="attackGenie">ATTACK</button>
-      <button>SUPPER ATTACK</button>
+      <button @click="attackMonster">ATTACK</button>
+      <button @click="supperAttack">SUPPER ATTACK</button>
       <button>HEAL</button>
       <button>SURRENDER</button>
     </section>
