--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
     </section>
     <section id="controls">
       <button @click="attackMonster">ATTACK</button>
-      <button @click="supperAttack">SUPPER ATTACK</button>
+      <button :disabled="disabledSupperAttack" @click="supperAttack">SUPPER ATTACK</button>
       <button>HEAL</button>
       <button>SURRENDER</button>
     </section>
     <section id="log" class="container">
-      <h2>Battle Log</h2>
-      <h2> {{newTest}} </h2>
+      <h2>I will add a battle log here!</h2>
       <ul></ul>
     </section>
   </div>
