--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="controls">
       <button @click="attackMonster">ATTACK</button>
       <button :disabled="disabledSupperAttack" @click="supperAttack">SUPPER ATTACK</button>
-      <button>HEAL</button>
+      <button @click="healPlayer">HEAL</button>
       <button>SURRENDER</button>
     </section>
     <section id="log" class="container">
