Less than zero health bar showes empty

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </section>
 
-    <!-- Match Conditions -->
+    <!-- Match Conditions for game over screening -->
     <section class="container" v-if="winner">
       <h3>Game Over!</h3>
       <h3 v-if="winner === 'monster'">You Lost.</h3>
