Add a new button for 2nd player

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <button :disabled="disabledSupperAttack" @click="supperAttack">SUPPER ATTACK</button>
       <button @click="healPlayer">HEAL</button>
       <button @click="surrender()">SURRENDER</button>
+      <button>2nd Player</button>
     </section>
     <section id="log" class="container">
       <h2>Battle Log!</h2>
